--- a/index.html
+++ b/index.html
@@ -16,16 +16,112 @@
     </nav>
 
     <div class="container">
-      <h1>Best of NCS - No Copyright Sounds</h1>
-      <div class="songList"></div>
+      <div class="songList">
+        <h1>Best of NCS - No Copyright Sounds</h1>
+        <div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+        </div>
+      </div>
       <div class="songBanner"></div>
     </div>
     <div class="bottom">
       <input type="range" name="range" id="myProgressBar" min="0" max="100" />
       <div class="icon">
-        <button><img class="svg" src="./backward-solid.svg" /></button>
-        <button><img class="svg" src="./circle-play-solid.svg" /></button>
-        <button><img class="svg" src="./forward-solid.svg" /></button>
+        <button class="songNav">
+          <img class="svg" src="./backward-solid.svg" />
+        </button>
+        <button class="songNav" id="masterPlay">
+          <img class="svg" src="./circle-play-solid.svg" />
+        </button>
+        <button class="songNav">
+          <img class="svg" src="./forward-solid.svg" />
+        </button>
+      </div>
+      <div class="songinfo">
+        <img src="playing.gif" alt="playing" /> Let me love you - justin beiber
       </div>
     </div>
     <script
