--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -35,6 +36,7 @@
           </div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -49,6 +51,7 @@
           </div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -63,6 +66,7 @@
           </div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -77,6 +81,7 @@
           </div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -91,6 +96,7 @@
           </div>
           <div class="songItem">
             <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
               >Let me love you</span
             >
             <span class="songlistplay"
@@ -98,6 +104,60 @@
 
               <!-- </span>
             <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <!-- </span>
+            <span> -->
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
+              <button class="songNav">
+                <img class="playbtn" src="./circle-play-solid.svg" />
+              </button>
+            </span>
+          </div>
+          <div class="songItem">
+            <img class="songThumbnail" src="covers/1.jpg" alt="1" /><span
+              class="songName"
+              >Let me love you</span
+            >
+            <span class="songlistplay"
+              >5:34
+
               <button class="songNav">
                 <img class="playbtn" src="./circle-play-solid.svg" />
               </button>
@@ -108,7 +168,14 @@
       <div class="songBanner"></div>
     </div>
     <div class="bottom">
-      <input type="range" name="range" id="myProgressBar" min="0" max="100" />
+      <input
+        type="range"
+        name="range"
+        id="myProgressBar"
+        min="0"
+        max="100"
+        value="0"
+      />
       <div class="icon">
         <button class="songNav">
           <img class="svg" src="./backward-solid.svg" />
@@ -121,7 +188,8 @@
         </button>
       </div>
       <div class="songinfo">
-        <img src="playing.gif" alt="playing" /> Let me love you - justin beiber
+        <img src="playing.gif" alt="playing" id="gif" /> Let me love you -
+        justin beiber
       </div>
     </div>
     <script
